# resume-parser-api

./: .replit  Procfile  main.py  pyproject.toml  render.yaml  svm_resume_model.pkl
