[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
python-docx = ">=1.1.0"
flask = ">=3.1.1"
gdown = ">=5.2.0"
pandas = ">=2.0.0"
textract = ">=1.6.5"
PyMuPDF = ">=1.23.0"
filetype = ">=1.2.0"
gunicorn = ">=21.2.0"
